ajout des pages vente v2

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,20 +7,31 @@
 </head>
 <body>
   <header>
-     <img class="logo" src="../assets/logo/Gifti5.png">
+    <!-- Pour le go to top -->
+    <a name="haut" id="haut"></a>
+    <div><a id="cRetour" class="cInvisible" href="#haut"></a></div>
+
+     <div class="logo"><a href="accueil.html"><img class="logoImg" src="../assets/logo/Gifti5.png"></a></div>
+     <br><br>
    <nav>
 
     <ul>
       <li><a href="moinde5ans.html">Moins de 5 ans</a></li>
+      <li>|</li>
       <li><a href="#filles">Filles</a></li>
+      <li>|</li>
       <li><a href="#garçons">Garçons</a></li>
+      <li>|</li>
       <li><a href="#jeuxdesociété">Jeux de Société</a></li>
+      <li>|</li>
       <li><a href="#jeuxvidéos">Jeux vidéos</a></li>
+      <li>|</li>
       <li><a href="#contact">Contacts</a></li>
-      <li><a href="#jeuxpromotionnels">Jeux promotionnels</a></li>
+      <li>|</li>
+      <li><a href="game.html">Jeux promotionnels</a></li>
     </ul>
    </nav>
- </header>
+  </header>
 
 <!-- contact physique-->
 <section id="contact1">
@@ -37,36 +48,43 @@
   <div class="mail">
    <h1>Notre adresse mail</h1>
   </div>
-  <div class="facebook-twitter">
+  <div class="facebook twitter">
    <h1>Follow us!</h1>
    </br>
    <h2>Suivez les bons plans</h2>
   </div>
 </section>
+<div class="client-bloc bloc-phone">
+			<div class="icon text-center">
+				<span class="icon-phone bg-orange blanc text-center"></span>
+			</div>
+			<h2 class="text-center">Par téléphone</h2>
+			<p>Nos bureaux sont ouverts du lundi au vendredi (9h00-12h30 et 13h30-17h00)<br>
+			Contactez-nous pour tout renseignement ou si vous souhaitez passer votre commande par téléphone </p>
+			<h3 class="hidden-xs telefoon">
+					<span class="">0 892 70 5002</span><br>
+					<small>(0,40€/min)</small>
+			</h3>
+			<p>Pour nous contacter à propos d'une de vos commandes utilisez le numéro non surtaxé indiqué dans votre mail de confirmation de commande.</p>
+  		</div>
 
 <!-- footer-->
-<footer>
-  <div class="Copyright">Copyright &copy; 2018
-    <ul class="bas">
-      <li><a href="https://fr-fr.facebook.com/" target="_blank"></a>
-        <i class="fab fa-facebook-square"></i>
-      </li>
-      <li><a href="https://twitter.com/?lang=fr" target="_blank"></a>
-        <i class="fab fa-twitter-square"></i>
-      </li>
-      <li><a href="https://www.instagram.com/?hl=fr" target="_blank"></a>
-        <i class="fab fa-instagram"></i>
-      </li>
-      <li><a href="https://fr-fr.messenger.com/" target="_blank"></a>
-        <i class="fab fa-facebook-messenger"></i>
-      </li>
-      <li><a href="https://maps.google.com/"></a>
-      </li>
-    </ul>
-  </div>
+    <footer>
+      <p id="copy"><a href="Mention-legale.html">Copyright</a> &copy; 2017 <span>RoKeTe</span></p>
+      <p id="icone">
+        <a href="https://fr-fr.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+        <a href="https://twitter.com/?lang=fr" target="_blank"><i class="fab fa-twitter-square"></i></a>
+        <a href="https://www.instagram.com/?hl=fr" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://fr-fr.messenger.com/" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
+        <a href="https://maps.google.com/"></a>
+      </p>
 
-</footer>
-<script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+
+    </footer>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+
+    <!-- Bouton go to top -->
+    <script type="text/javascript" src="../js/goToTop.js"></script>
 
 </body>
 </html>
