Edit nav et footer + accueil

--- a/pages/accueil.html
+++ b/pages/accueil.html
@@ -16,41 +16,37 @@
        <nav>
 
         <ul>
+          <li><a href="accueil.html">Accueil</a></li>
+          <li>|</li>
           <li><a href="moinde5ans.html">Moins de 5 ans</a></li>
           <li>|</li>
-          <li><a href="#filles">Filles</a></li>
+          <li><a href="fille.html">Filles</a></li>
           <li>|</li>
-          <li><a href="#garçons">Garçons</a></li>
+          <li><a href="Garcons.html">Garçons</a></li>
           <li>|</li>
           <li><a href="#jeuxdesociété">Jeux de Société</a></li>
           <li>|</li>
           <li><a href="#jeuxvidéos">Jeux vidéos</a></li>
           <li>|</li>
-          <li><a href="#contact">Contacts</a></li>
+          <li><a href="contact.html">Contacts</a></li>
           <li>|</li>
-          <li><a href="game.html">Jeux promotionnels</a></li>
+          <li><a href="game.html">Jeu promotionnel</a></li>
         </ul>
        </nav>
       </header>
 
 <!-- barre déroulante -->
-    <section id="barre_déroulante">
-       <div class="barre_déroulante">
+    <section id="actu">
          <h1>Nos actualités promotionnelles</h1>
+         <div class="actuContainer">
            <div class="promo" align="left">
-              <!-- align="left"> -->
-            <!-- <MARQUEE onMouseOver=this.stop() onMouseOut=this.start() scrollAmount=4 scrolldelay="0" direction="left" behavior="scroll" border="0" loop="1" hspace="0"> -->
-              <a href="promo1"><img class="promo" src="../assets/accueil_imgs/bon_reduc.png"></a>
-              <a href="promo2"><img class="promo" src="../assets/accueil_imgs/ouverture_ex.png"></a>
-              <a href="promo3"><img class="promo" src="../assets/accueil_imgs/Venez jouer en famille.png"></a>
-              <a href="promo4"><img class="promo" src="../assets/accueil_imgs/Arrivage des jeux de plein air.png"></a>
-
-<!-- Fin de la Zone de Défilement -->
-            <!-- </MARQUEE> -->
-          </div>
-         <div class="Bouton1"><a href="#Produits">Découvrez nos produits</a>
+              <img class="promo" src="../assets/accueil_imgs/bon_reduc.png">
+              <img class="promo" src="../assets/accueil_imgs/ouverture_ex.png">
+              <img class="promo" src="../assets/accueil_imgs/Venez jouer en famille.png">
+              <img class="promo" src="../assets/accueil_imgs/Arrivage des jeux de plein air.png">
+            </div>
+            <div class="Bouton1"><a href="#Produits">Découvrez nos produits</a></div>
          </div>
-       </div>
     </section>
 
 <!-- top vente et promo -->
@@ -63,12 +59,7 @@
     </section>
 
 <!-- bannière jeux promotionnels -->
-    <section id="réductions">
-      <div class="réductions">
-        <a href="game.html"><div id="game_img"></div></a>
-       <!--<h1>Viens jouer!</h1><h2>et gagne des bons de réduction<h2>-->
-      </div>
-    </section>
+    <a href="game.html"><section id="réductions"></section></a>
 
     <!-- footer-->
         <footer>
