--- a/pages/moinde5ans.html
+++ b/pages/moinde5ans.html
@@ -14,24 +14,26 @@
       <a name="haut" id="haut"></a>
       <div><a id="cRetour" class="cInvisible" href="#haut"></a></div>
 
-       <img class="logo" src="../assets/logo/Gifti5.png">
+       <div class="logo"><a href="accueil.html"><img class="logoImg" src="../assets/logo/Gifti5.png"></a></div>
        <br><br>
      <nav>
 
       <ul>
+        <li><a href="accueil.html">Accueil</a></li>
+        <li>|</li>
         <li><a href="moinde5ans.html">Moins de 5 ans</a></li>
         <li>|</li>
-        <li><a href="#filles">Filles</a></li>
+        <li><a href="fille.html">Filles</a></li>
         <li>|</li>
-        <li><a href="#garçons">Garçons</a></li>
+        <li><a href="Garcons.html">Garçons</a></li>
         <li>|</li>
         <li><a href="#jeuxdesociété">Jeux de Société</a></li>
         <li>|</li>
         <li><a href="#jeuxvidéos">Jeux vidéos</a></li>
         <li>|</li>
-        <li><a href="#contact">Contacts</a></li>
+        <li><a href="contact.html">Contacts</a></li>
         <li>|</li>
-        <li><a href="game.html">Jeux promotionnels</a></li>
+        <li><a href="game.html">Jeu promotionnel</a></li>
       </ul>
      </nav>
     </header>
