--- a/pages/game.html
+++ b/pages/game.html
@@ -32,19 +32,21 @@
      <nav>
 
       <ul>
+        <li><a href="accueil.html">Accueil</a></li>
+        <li>|</li>
         <li><a href="moinde5ans.html">Moins de 5 ans</a></li>
         <li>|</li>
-        <li><a href="#filles">Filles</a></li>
+        <li><a href="fille.html">Filles</a></li>
         <li>|</li>
-        <li><a href="#garçons">Garçons</a></li>
+        <li><a href="Garcons.html">Garçons</a></li>
         <li>|</li>
         <li><a href="#jeuxdesociété">Jeux de Société</a></li>
         <li>|</li>
         <li><a href="#jeuxvidéos">Jeux vidéos</a></li>
         <li>|</li>
-        <li><a href="#contact">Contacts</a></li>
+        <li><a href="contact.html">Contacts</a></li>
         <li>|</li>
-        <li><a href="game.html">Jeux promotionnels</a></li>
+        <li><a href="game.html">Jeu promotionnel</a></li>
       </ul>
      </nav>
     </header>
