ajout pages ventes jeux vidéo

--- a/pages/jeux_videos.html
+++ b/pages/jeux_videos.html
@@ -38,10 +38,123 @@
         </div>
 
         <div class="imgs">
-          <h5></h5>
-          <img src="../assets/jeux_video/" alt=""/>
-          <button><span></span></button>
-          <p></p>
+          <h5>Okami <br> HD</h5>
+          <img src="../assets/jeux_video/okami.jpg" alt="Okami HD"/>
+          <button><span>24&euro;99</span></button>
+          <p>Découvrez cet incroyable chef-d'œuvre et son style graphique semi inimitable en haute résolution.<br> Incarnez Amaterasu, la déesse japonaise du soleil, qui prend la forme d'un loup blanc légendaire pour tenter de vaincre Orochi, un tyrannique démon à huit têtes n'ayant laissé du Nippon qu'un vaste champ de ruines.</p>
+        </div>
+
+        <div class="imgs">
+          <h5>Mario Party <br> The Top 100 3DS</h5>
+          <img src="../assets/jeux_video/mario_party.jpg" alt="Mario Party The Top 100 3DS"/>
+          <button><span>44&euro;99</span></button>
+          <p>Nous avons sélectionné les 100 meilleurs mini-jeux, un nombre inégalé dans un jeu Mario Party, afin de créer le meilleur opus qui soit. Le jeu est compatible avec le mode téléchargement pour jusqu'à 4 joueurs : avec une seule carte de jeu, vous pouvez jouer avec n'importe quel ami disposant d'une console de la famille Nintendo 3DS !</p>
+        </div>
+
+        <div class="imgs">
+          <h5>Nintendo New 2ds Xl Pikachu</h5>
+          <img src="../assets/jeux_video/consoleds.jpg" alt="Nintendo New 2ds Xl Pikachu"/>
+          <button><span>159&euro;99</span></button>
+          <p>Contenu de la boîte <br>
+            1x console New Nintendo 2DS XL Pikachu Edition Limitée <br>
+            1x stylet New Nintendo 2DS XL <br>
+            1x carte mémoire microSDHC (4 Go) <br>
+            6x cartes RA <br>
+            1x manuel d'utilisation <br>
+            1x bloc d'alimentation <br>
+            La New Nintendo 2DS XL est compatible avec tous les jeux Nintendo 3DS en 2D. Avec un large écran de 4,88 pouces et un poids de seulement 260 grammes, un nouveau type de Nintendo 2DS est né.</p>
+        </div>
+
+        <div class="imgs">
+          <h5>Playerunknown’s <br> battleground</h5>
+          <img src="../assets/jeux_video/pubg.jpg" alt="Playerunknown’s battleground"/>
+          <button><span>29&euro;99</span></button>
+          <p>Playerunknown's battlegrounds est un jeu de survie développé en collaboration avec la communauté.<br>
+            Débutant sans rien, les joueurs doivent se débrouiller pour trouver des armes et des équipement dans une bataille où il ne peut y avoir qu'un vainqueur.<br> Ce jeu réaliste et à haute tension se déroule sur une île massive de 8x8 km.</p>
+        </div>
+
+        <div class="imgs">
+          <h5>Forza <br> Motorsport 7</h5>
+          <img src="../assets/jeux_video/fm7.jpg" alt="Forza Motorsport 7"/>
+          <button><span>69&euro;99</span></button>
+          <p>Ressentez le frisson du sport automobile avec le Forza Motorsport le plus complet, le plus beau et le plus réaliste jamais conçu.<br>
+            - Profitez de graphismes époustouflants en 60 images par seconde et d'une résolution native 4K en HDR.<br>
+            - Collectionnez et pilotez plus de 700 voitures dont un nombre impressionnant et jamais égalé de Ferrari, Porsche (la nouvelle 911 GT2 RS) et Lamborghini.<br>
+            - Lancez-vous sur 30 célèbres circuits et 200 tracés où les conditions changent à chaque course.<br>
+            - Multijoueur en ligne jusqu'à 24 joueurs, 2 joueurs en écran partagé local.</p>
+        </div>
+
+        <div class="imgs">
+          <h5>Pack Xbox One S <br> Rocket League</h5>
+          <img src="../assets/jeux_video/xboxsrocket.jpg" alt="Pack Xbox One S + Rocket League"/>
+          <button><span>279&euro;99</span></button>
+          <p>Pack Xbox One S 500go Blanche + Rocket League + 3m Live <br>
+            Contenu du pack : <br>
+            - 1 Console Xbox One S avec son disque dur de 500 Go <br>
+            - 1 manette sans fil Xbox One <br>
+            - Le jeu Rocket League <br>
+            - 1 câble HDMI (4K) <br>
+            - 1 câble d’alimentation AC <br>
+            - 3 mois Xbox Live Gold <br>
+            - 1 mois d'essaie au Xbox Game Pass</p>
+        </div>
+
+        <div class="imgs">
+          <h5>Fallout 4 <br> vr</h5>
+          <img src="../assets/jeux_video/fallout.jpg" alt="Fallout 4 réaliter virtuel"/>
+          <button><span>59&euro;99</span></button>
+          <p>Fallout 4, la légendaire aventure post-apocalyptique de Bethesda Game Studios qui a remporté plus de 200 récompenses dont Jeu de l'année aux BAFTA et DICE, sort enfin en version compatible VR.</p>
+        </div>
+
+        <div class="imgs">
+          <h5>The <br> division</h5>
+          <img src="../assets/jeux_video/division.jpg" alt="The division"/>
+          <button><span>29&euro;99</span></button>
+          <p>Bienvenue dans un monde ouvert en ligne, au service d'un RPG qui fait la part belle à l'exploration et à l'évolution des personnages. Servez-vous de vos compétences, de vos armes et de votre sagacité pour mettre toutes les chances de votre côté. Jouez dans un environnement persistant et dynamique qui combine l'authenticité et les décisions tactiques propres à la série Tom Clancy avec une jouabilité action-RPG, dotée d'un système d'évolution et d'interaction poussé.
+            - Faites équipe avec vos amis en Coop et rejoignez ou quittez l'action à tout moment. Passez instantanément en PvP, faites du commerce avec les autres joueurs et découvrez des scénarios haletants où le danger peut venir de partout et de n'importe qui.</p>
+        </div>
+
+        <div class="imgs">
+          <h5>vampyr <br> collector</h5>
+          <img src="../assets/jeux_video/vampyr.jpg" alt="vampyr"/>
+          <button><span>59&euro;99</span></button>
+          <p>Vous êtes Jonathan E. Reid, un chirurgien militaire de renom qui devient la proie d’un Vampire à son retour du front.<br> Désormais l’un d’entre eux, vous êtes tiraillé entre votre volonté de sauver des vies et votre insatiable soif de sang... une dualité homme/bête et des choix moraux qui se retrouvent au centre du jeu, et qui sont le point de départ d’une quête mouvementée à la recherche d’un remède à votre condition nouvelle. Alors que vous vous agrippez à ce qu’il reste de votre humanité, vos choix et décisions scelleront votre destin, tandis que vous rechercherez des réponses à vos questions et, s’il existe, un remède à votre état.</p>
+        </div>
+
+        <div class="imgs">
+          <h5>Dragon Ball <br> Xenoverse 2</h5>
+          <img src="../assets/jeux_video/dbx2.jpg" alt="Dragon Ball Xenoverse 2"/>
+          <button><span>59&euro;99</span></button>
+          <p>Dragon Ball Xenoverse 2 reprend la base du très apprécié Dragon Ball Xenoverse avec des graphismes améliorés qui plongeront les joueurs dans le plus grand et le plus détaillé monde de Dragon Ball jamais créé. Dragon Ball Xenoverse 2 pour Nintendo Switch inclut des caractéristiques spécifiques à la Switch et une manière de jouer différente avec vos amis en local et en ligne.</p>
+        </div>
+
+        <div class="imgs">
+          <h5>farming simulator <br> 2017</h5>
+          <img src="../assets/jeux_video/fs.jpg" alt="farming simulator 2017"/>
+          <button><span>44&euro;99</span></button>
+          <p>Gérez votre exploitation de A à Z : cultivez et moissonnez de nombreux types de grains et plantes, et prenez soin de votre élevage. Lancez-vous dans l’exploitation forestière, transportez vos récoltes en camion ou en train, et vendez votre production pour investir et agrandir votre ferme !</p>
+        </div>
+
+        <div class="imgs">
+          <h5>fifa <br> 2018</h5>
+          <img src="../assets/jeux_video/fifa.jpg" alt="fifa 2018"/>
+          <button><span>69&euro;99</span></button>
+          <p>FIFA 18 s'inspire du talent de Cristiano Ronaldo pour enrichir son gameplay.
+            Formidable outil d'innovation pour renforcer le réalisme et donner vie à de nouveaux environnements et à des personnages hauts en couleur, le moteur Frostbite permet de proposer un jeu à la frontière entre le réel et le virtuel. Grâce à des techniques utilisées dans l’industrie du cinéma pour la représentation des personnages et des terrains, FIFA 18 est la simulation de football la plus réaliste et la plus impressionnante visuellement à ce jour.</p>
+        </div>
+
+        <div class="imgs">
+          <h5>Call of Duty <br> WWII</h5>
+          <img src="../assets/jeux_video/callof.jpg" alt="Call of Duty WWII"/>
+          <button><span>69&euro;99</span></button>
+          <p>Call of Duty renoue avec ses origines dans Call of Duty WWII une expérience époustouflante qui redéfinit le FPS Seconde Guerre mondiale pour une nouvelle génération de joueurs. Débarquez en Normandie le 6 juin 1944 et combattez à travers la France et l’Europe sur les fronts emblématiques de la plus grande guerre de l’Histoire. Vivez des combats dans la plus pure tradition de Call of Duty et forgez des liens de camaraderie inébranlables face à la nature impitoyable de la guerre contre une puissance mondiale faisant ployer le monde sous le joug de sa tyrannie.</p>
+        </div>
+
+        <div class="imgs">
+          <h5>Star Wars <br> Battlefront II </h5>
+          <img src="../assets/jeux_video/swb.jpg" alt="Star Wars : Battlefront II "/>
+          <button><span>69&euro;99</span></button>
+          <p>Incarnez un intrépide soldat, pilotez des vaisseaux légendaires, menez vos personnages préférés de la saga Star Wars au combat, ou tracez votre propre chemin en incarnant un soldat d'élite des forces spéciales dans une nouvelle histoire Star Wars.</p>
         </div>
 <br><br><br><br>
 <!-- footer-->
