Edit jeu promo description

--- a/pages/accueil.html
+++ b/pages/accueil.html
@@ -24,9 +24,9 @@
           <li>|</li>
           <li><a href="Garcons.html">Garçons</a></li>
           <li>|</li>
-          <li><a href="#jeuxdesociété">Jeux de Société</a></li>
+          <li><a href="jeux_societe.html">Jeux de Société</a></li>
           <li>|</li>
-          <li><a href="#jeuxvidéos">Jeux vidéos</a></li>
+          <li><a href="jeux_videos.html">Jeux vidéos</a></li>
           <li>|</li>
           <li><a href="contact.html">Contacts</a></li>
           <li>|</li>
@@ -43,7 +43,7 @@
               <img class="promo" src="../assets/accueil_imgs/bon_reduc.png">
               <img class="promo" src="../assets/accueil_imgs/ouverture_ex.png">
               <img class="promo" src="../assets/accueil_imgs/Venez jouer en famille.png">
-              <img class="promo" src="../assets/accueil_imgs/Arrivage des jeux de plein air.png">
+              <img class="promo" src="../assets/accueil_imgs/Arrivage_des_jeux_de_plein_air.png">
             </div>
             <div class="Bouton1"><a href="#Produits">Découvrez nos produits</a></div>
          </div>
