--- a/pages/game.html
+++ b/pages/game.html
@@ -40,9 +40,9 @@
         <li>|</li>
         <li><a href="Garcons.html">Garçons</a></li>
         <li>|</li>
-        <li><a href="#jeuxdesociété">Jeux de Société</a></li>
+        <li><a href="jeux_societe.html">Jeux de Société</a></li>
         <li>|</li>
-        <li><a href="#jeuxvidéos">Jeux vidéos</a></li>
+        <li><a href="jeux_videos.html">Jeux vidéos</a></li>
         <li>|</li>
         <li><a href="contact.html">Contacts</a></li>
         <li>|</li>
@@ -52,7 +52,14 @@
     </header>
 
    <!-- Div qui contient le jeu -->
-    <div id="game" style="margin:10px"></div>
+    <div id="game"></div>
+
+    <div class="gameDescription">
+      <h2>Jeu promotionnel: Gifti Breakout!!!</h2>
+      <p>Jouez à notre jeu promotionnel vous permettra d'obtenir des bons de réduction. Le jeu du moment est un jeu de casse-briques.<br/>
+      Dirigez votre pad, et faites rebondir la balle afin de casser le maximum de briques! Gagnez 500 point pour obtenir votre code promo,
+      mais attention car le player 2 fera diminuer votre score!</p>
+    </div>
 
     <!-- Script du jeu -->
     <script type="text/javascript">
