Edit page d'accueil et jeu promo final

--- a/pages/accueil.html
+++ b/pages/accueil.html
@@ -37,7 +37,7 @@
 
 <!-- barre déroulante -->
     <section id="actu">
-         <h1>Nos actualités promotionnelles</h1>
+         <h1>Nos actualités promotionnelles:</h1>
          <div class="actuContainer">
            <div class="promo" align="left">
               <img class="promo" src="../assets/accueil_imgs/bon_reduc.png">
@@ -45,21 +45,126 @@
               <img class="promo" src="../assets/accueil_imgs/Venez jouer en famille.png">
               <img class="promo" src="../assets/accueil_imgs/Arrivage_des_jeux_de_plein_air.png">
             </div>
-            <div class="Bouton1"><a href="#Produits">Découvrez nos produits</a></div>
+            <div class="Bouton1"><a href="#Top-vente-et-promo">Découvrez nos produits</a></div>
          </div>
     </section>
 
-<!-- top vente et promo -->
-    <section id="topvente">
-       <div class="topvente">
-         <h1>Le top des tops!</h1>
-         <p>Découvrez le meilleur des ventes actuelles</p>
-         <h1>Nos promotions jeux et jouets</h1>
-       </div>
-    </section>
+    <section id="Top-vente-et-promo" >
+      <h1>Le meilleur de nos vente:</h1>
 
+      <div class="top">
+
+          <div class="imgs">
+            <h5>Boite <br> de 60 feutres</h5>
+            <img src="../assets/jouet_moin_de_5_ans/Boitede60feutres.jpg" alt="Boite de 60 feutres" />
+            <button><span>24&euro;99</span></button>
+            <p class="jouets"> Les enfants peuvent créer, dessiner, colorier et ainsi laisser libre cours à leur créativité.<br><br>Ce maxi kit est composé de :<br>- 36 mini feutres à colorier<br>- 8 mini feutres pour fenêtres<br>- 16 feutres à pointe folle<br>- 5 pochoirs<br><br>Ces feutres se lavent à l'eau et au savon sur la peau, et en machine pour les textiles lavables.</p>
+          </div>
+
+          <div class="imgs">
+            <h5>Camion Jungle <br> Pat-Patrouille</h5>
+            <img src="../assets/jouet_moin_de_5_ans/Camion_Jungle.jpg" alt="Camion Jungle pat Patrouille">
+            <button><span>89&euro;99</span></button>
+            <p>Le véhicule de secours ultime aux couleurs de la Jungle ! Votre petit pourra y garer jusqu'à 6 véhicules de la Pat'Patrouille lorsqu'il est déployé et partir à l'aventure où il voudra.<br>Les chiots de la Pat'Patrouille peuvent garer leurs véhicules à l'intérieur et ainsi partir à l'aventure n'importe où ! Rien de tel pour transporter toute l'équipe vers de nouvelles destinations exotiques. Le camion de la Pat'Patrouille est livré avec Ryder et son quad.<br>Le camion comprend un ascenseur pour transférer les véhicules des chiots au QG de Ryder! Amitié, courage et travail d'équipe sont au programme avec les chiots de la Pat'Patrouille ! Leurs péripéties stimuleront l'imagination des enfants.<br>Contenu de la boite : 1 camion, 1 figurine Ryder Jungle et 1 voiture.</p>
+          </div>
+
+          <div class="imgs">
+            <h5>Zoomer <br> pony</h5>
+            <img src="../assets/jouet_moin_de_5_ans/Zoomer_pony.jpg" alt="Zoomer pony" />
+            <button><span>109&euro;99</span></button>
+            <p>Zoomer Pony est un animal interactif qui se déplace comme un vrai poney et qui réagit quand on lui donne ses accessoires.<br>Ce robot se déplace de façon autonome et réaliste. Comme un animal de compagnie, elle est capable de suivre l'enfant grâce à ses capteurs.<br>Ses yeux indiquent ce qu'elle ressent. Votre enfant devra être à son écoute et la brosser, lui donner à manger et prendre soin d'elle.<br>La boîte contient Zoomer Pony et 4 accessoires : une pomme, une carotte, un dé de sucre et une brosse.<br><br>Nécessite 4 piles LR06 non incluses</p>
+          </div>
+
+          <div class="imgs">
+            <h5>Cars 3 Voiture Flash <br> McQueen interactive</h5>
+            <img src="../assets/jouet_garcon/cars.jpg" alt="Cars 3 - Voiture Flash McQueen interactive" />
+            <button><span>39&euro;99</span></button>
+            <p>Retournez dans l'univers dérapant du film Cars 3 avec ce véhicule Flash McQueen en format 1/16ème ! <br>
+  Ce jouet dispose d'une fonction très innovante qui le fait réagir aux mouvements que nous allons donner à la voiture. En plus, la voiture est animée son et lumière avec 20 phrases emblématiques et des phares qui s'allument. Avec ce véhicule Cars, votre enfant pourra reproduire les histoires de son héros favoris et se prendre à des jeux de rôle. Seul ou avec ses copains, les scènes mythiques du film Cars 3 n'auront plus de secret pour lui et il deviendra un véritable pilote !<br>
+  Piles : 3 x AA-LR6 fournies.<br>
+  Le véhicule est bien en français une fois la languette du "Try me" retirée.</p>
+          </div>
+
+          <div class="imgs">
+            <h5>Les Tortues Ninja Figurine Articulée 25 cm</h5>
+            <img src="../assets/jouet_garcon/tortue.jpg" alt="Les Tortues Ninja 2-Figurine Articulée 25 cm" />
+            <button><span>45&euro;99</span></button>
+            <p>Retrouvez vos héros du film Les Tortues Ninja 2 avec cette figurine qui vous permettra de revivre les aventures des célèbres tortues.<br>
+  Figurine articulée de 25 cm livrée avec son arme. Avec ce jouet, l'imagination n'aura plus de limite et le jeu n'en sera que meilleur.</p>
+          </div>
+
+          <div class="imgs">
+            <h5>Ben 10 <br> montre omnitrix</h5>
+            <img src="../assets/jouet_garcon/ben10.jpg" alt="Ben 10 montre omnitrix" />
+            <button><span>34&euro;99</span></button>
+            <p>Portez vous aussi votre montre omnitrix pour ressembler au héros de la série TV Ben10 !<br>
+  Ce jouet est un omnitrix ; sorte de montre alien qui, dans la série, donne à son porteur la capacité de modifier son code génétique pour prendre la forme de n'importe quelle créature ! Choisissez votre alien et activez les effets lumineux et sonores avec les 120 phrases de la série. Avec cet accessoire indispensable, votre enfant va pouvoir revivre ses moments préférés de la série Ben10 !<br>
+  Piles :  2 x LR03-AAA incluses. </p>
+          </div>
+
+          <div class="imgs">
+            <h5>Figurine <br> poney</h5>
+            <img src="../assets/jouet_fille/poney.jpg" alt="Figurine poney" />
+            <button><span>8&euro;00</span></button>
+            <p>Elle va adorer chouchouter sa princesse poney grâce aux accessoires.<br>
+          - Figurine poney en plastique, revêtement toucher velours <br>
+          - 1 peigne <br>
+          - 1 miroir <br>
+          - 4 barrettes</p>
+          </div>
+
+          <div class="imgs">
+            <h5>Panoplie Princesse avec accessoires</h5>
+            <img src="../assets/jouet_fille/set_princess.jpg" alt="Panoplie Princesse avec accessoires" />
+            <button><span>19&euro;99</span></button>
+            <p>Quelle petite fille n'a jamais rêvé d'être une princesse ?<br>
+          Avec ce déguisement c'est enfin possible. <br>
+          Un costume de princesse (robe courte) livré avec des accessoires : chaussures, gants, bijoux et un sac.</p>
+          </div>
+
+          <div class="imgs">
+            <h5>Resident <br> Evil 7</h5>
+            <img src="../assets/jeux_video/re.jpg" alt="Resident Evil 7" />
+            <button><span>49&euro;99</span></button>
+            <p>Biohazard se déroule dans un domaine au cœur de l’Amérique rurale et prend place après les tragiques évènements de Resident Evil 6.<br> Les joueurs vont découvrir une nouvelle expérience dans les Resident Evil avec une jouabilité à la première personne.<br>
+              Remettant au goût du jour les éléments de gameplay iconique du survival/horreur créé il y a 20 ans :<br> exploration, puzzle et combats dans une ambiance anxiogène et prenante.</p>
+          </div>
+
+          <div class="imgs">
+            <h5>Okami <br> HD</h5>
+            <img src="../assets/jeux_video/okami.jpg" alt="Okami HD"/>
+            <button><span>24&euro;99</span></button>
+            <p>Découvrez cet incroyable chef-d'œuvre et son style graphique semi inimitable en haute résolution.<br> Incarnez Amaterasu, la déesse japonaise du soleil, qui prend la forme d'un loup blanc légendaire pour tenter de vaincre Orochi, un tyrannique démon à huit têtes n'ayant laissé du Nippon qu'un vaste champ de ruines.</p>
+          </div>
+
+          <div class="imgs">
+            <h5>Risk <br> Star Wars</h5>
+            <img src="../assets/jeux_de_societe/risksw.jpg" alt="Risk Star Wars" />
+            <button><span>54&euro;99</span></button>
+            <p>Le célèbre jeu de stratégie dans l’univers spatial de Star Wars.<br>
+              La conquête de la galaxie approche alors que la Force soit avec toi !<br>
+              Recréez l’ambiance de la scène finale de l’épisode du Retour du Jedi.<br> Choisissez votre mission :<br> avec l’Empire tentez de détruire la flotte rebelle ;<br> Tandis qu'avec l’alliance, tentez une bonne fois pour toute de détruire l’Etoile Noire !<br>
+              Un magnifique plateau sous forme de vaisseau Tie Fighter.<br>
+              De 2 à 4 joueurs.</p>
+          </div>
+
+          <div class="imgs">
+            <h5>Jeu <br>Déblock</h5>
+            <img src="../assets/jeux_de_societe/deblock.jpg" alt="Déblock"/>
+            <button><span>27&euro;99</span></button>
+            <p>Amusez-vous et stimulez votre rapidité !<br>
+              Chaque joueur dispose de 5 blocs qui comportent chacun 8 symboles. Une carte est retournée, qui comporte un schéma à reproduire le plus vite possible, avant de crier « Déblok ! ».<br>
+              S’il se trompe, il ne jouera pas le tour suivant. S’il a raison et que le schéma est respecté, il gagne la carte.<br>
+              Celui ou celle qui a le plus de cartes l’emporte. Déblok possède deux modes de jeu, 60 défis et cinq niveaux de difficulté !<br>
+              Vos enfants seront ravis de pouvoir s'amuser entre amis ou bien en famille !</p>
+          </div>
+      </div>
+        </section>
+<br/>
 <!-- bannière jeux promotionnels -->
+    <h2 id="jeuPromo">Venez tester notre jeu promotionnel:</h2>
     <a href="game.html"><section id="réductions"></section></a>
+<br/><br/><br/>
 
     <!-- footer-->
         <footer>
@@ -76,6 +181,8 @@
         </footer>
         <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 
+        <!-- Pour la div de présentation des produits -->
+        <script type="text/javascript" src="../js/presentation_produit.js"></script>
         <!-- Bouton go to top -->
         <script type="text/javascript" src="../js/goToTop.js"></script>
   </body>
