edit des pages vente V3

--- a/pages/Garcons.html
+++ b/pages/Garcons.html
@@ -19,22 +19,24 @@
      <nav>
 
       <ul>
+        <li><a href="accueil.html">Accueil</a></li>
+        <li>|</li>
         <li><a href="moinde5ans.html">Moins de 5 ans</a></li>
         <li>|</li>
-        <li><a href="#filles">Filles</a></li>
+        <li><a href="fille.html">Filles</a></li>
         <li>|</li>
-        <li><a href="#garçons">Garçons</a></li>
+        <li><a href="Garcons.html">Garçons</a></li>
         <li>|</li>
-        <li><a href="#jeuxdesociété">Jeux de Société</a></li>
+        <li><a href="jeux_societe.html">Jeux de Société</a></li>
         <li>|</li>
-        <li><a href="#jeuxvidéos">Jeux vidéos</a></li>
+        <li><a href="jeux_videos.html">Jeux vidéos</a></li>
         <li>|</li>
-        <li><a href="#contact">Contacts</a></li>
+        <li><a href="contact.html">Contacts</a></li>
         <li>|</li>
-        <li><a href="game.html">Jeux promotionnels</a></li>
+        <li><a href="game.html">Jeu promotionnel</a></li>
       </ul>
      </nav>
-     <br><br>
+     </nav>
     </header>
 <br><br><br><br>
     <section id="Filles">
@@ -184,7 +186,7 @@ Dimensions : 5 x 7 x 2 cm.</p>
         </div>
 </div>
 </section>
-<br><br><br><br>
+
 <!-- footer-->
     <footer>
       <p id="copy"><a href="Mention-legale.html">Copyright</a> &copy; 2017 <span>RoKeTe</span></p>
@@ -200,7 +202,10 @@ Dimensions : 5 x 7 x 2 cm.</p>
     </footer>
     <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 
-    <script type="text/javascript" src="../js/presentation_produit.js"></script>
+    <!-- Bouton go to top -->
+    <script type="text/javascript" src="../js/goToTop.js"></script>
+    <!--presentation des divs -->
+      <script type="text/javascript" src="../js/presentation_produit.js"></script>
 
 </body>
 </html>
