--- a/pages/moinde5ans.html
+++ b/pages/moinde5ans.html
@@ -27,9 +27,9 @@
         <li>|</li>
         <li><a href="Garcons.html">Garçons</a></li>
         <li>|</li>
-        <li><a href="#jeuxdesociété">Jeux de Société</a></li>
+        <li><a href="jeux_societe.html">Jeux de Société</a></li>
         <li>|</li>
-        <li><a href="#jeuxvidéos">Jeux vidéos</a></li>
+        <li><a href="jeux_videos.html">Jeux vidéos</a></li>
         <li>|</li>
         <li><a href="contact.html">Contacts</a></li>
         <li>|</li>
@@ -43,7 +43,7 @@
       <p class="descriptif">Vous trouverez ici des jouets pour les enfants de 0 a 5 ans, pour les guider dans leur éveil et leur développement tout en s’amusant. Allant du doudou au tricycle ou du coloriage au jeu de construction votre enfant n’aura qu’une seule limite son imagination.</p>
     </section>
     <br><br><br>
-    <section id="Top vente et promo" >
+    <section id="top-vente-et-promo" >
 
       <div class="top">
 
@@ -156,7 +156,7 @@
 
       </div>
     </section>
-    <br><br><br><br>
+
     <!-- footer-->
         <footer>
           <p id="copy"><a href="Mention-legale.html">Copyright</a> &copy; 2017 <span>RoKeTe</span></p>
@@ -172,10 +172,10 @@
         </footer>
         <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 
-        <!-- Pour la div de présentation des produits -->
-        <script type="text/javascript" src="../js/presentation_produit.js"></script>
         <!-- Bouton go to top -->
         <script type="text/javascript" src="../js/goToTop.js"></script>
+        <!--presentation des divs -->
+          <script type="text/javascript" src="../js/presentation_produit.js"></script>
 
   </body>
 </html>
