--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,19 +16,21 @@
    <nav>
 
     <ul>
+      <li><a href="accueil.html">Accueil</a></li>
+      <li>|</li>
       <li><a href="moinde5ans.html">Moins de 5 ans</a></li>
       <li>|</li>
-      <li><a href="#filles">Filles</a></li>
+      <li><a href="fille.html">Filles</a></li>
       <li>|</li>
-      <li><a href="#garçons">Garçons</a></li>
+      <li><a href="Garcons.html">Garçons</a></li>
       <li>|</li>
-      <li><a href="#jeuxdesociété">Jeux de Société</a></li>
+      <li><a href="jeux_societe.html">Jeux de Société</a></li>
       <li>|</li>
-      <li><a href="#jeuxvidéos">Jeux vidéos</a></li>
+      <li><a href="jeux_videos.html">Jeux vidéos</a></li>
       <li>|</li>
-      <li><a href="#contact">Contacts</a></li>
+      <li><a href="contact.html">Contacts</a></li>
       <li>|</li>
-      <li><a href="game.html">Jeux promotionnels</a></li>
+      <li><a href="game.html">Jeu promotionnel</a></li>
     </ul>
    </nav>
   </header>
@@ -68,23 +70,23 @@
 			<p>Pour nous contacter à propos d'une de vos commandes utilisez le numéro non surtaxé indiqué dans votre mail de confirmation de commande.</p>
   		</div>
 
-<!-- footer-->
-    <footer>
-      <p id="copy"><a href="Mention-legale.html">Copyright</a> &copy; 2017 <span>RoKeTe</span></p>
-      <p id="icone">
-        <a href="https://fr-fr.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
-        <a href="https://twitter.com/?lang=fr" target="_blank"><i class="fab fa-twitter-square"></i></a>
-        <a href="https://www.instagram.com/?hl=fr" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://fr-fr.messenger.com/" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
-        <a href="https://maps.google.com/"></a>
-      </p>
+      <!-- footer-->
+          <footer>
+            <p id="copy"><a href="Mention-legale.html">Copyright</a> &copy; 2017 <span>RoKeTe</span></p>
+            <p id="icone">
+              <a href="https://fr-fr.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+              <a href="https://twitter.com/?lang=fr" target="_blank"><i class="fab fa-twitter-square"></i></a>
+              <a href="https://www.instagram.com/?hl=fr" target="_blank"><i class="fab fa-instagram"></i></a>
+              <a href="https://fr-fr.messenger.com/" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
+              <a href="https://maps.google.com/"></a>
+            </p>
 
 
-    </footer>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+          </footer>
+          <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 
-    <!-- Bouton go to top -->
-    <script type="text/javascript" src="../js/goToTop.js"></script>
+          <!-- Bouton go to top -->
+          <script type="text/javascript" src="../js/goToTop.js"></script>
 
 </body>
 </html>
