--- a/pages/jeux_societe.html
+++ b/pages/jeux_societe.html
@@ -10,18 +10,30 @@
   <body id="gris">
 
     <header>
-       <img class="logo" src="../assets/logo/Gifti5.png">
+      <!-- Pour le go to top -->
+      <a name="haut" id="haut"></a>
+      <div><a id="cRetour" class="cInvisible" href="#haut"></a></div>
+
+       <div class="logo"><a href="accueil.html"><img class="logoImg" src="../assets/logo/Gifti5.png"></a></div>
        <br><br>
      <nav>
 
       <ul>
+        <li><a href="accueil.html">Accueil</a></li>
+        <li>|</li>
         <li><a href="moinde5ans.html">Moins de 5 ans</a></li>
-        <li><a href="#filles">Filles</a></li>
-        <li><a href="#garçons">Garçons</a></li>
-        <li><a href="#jeuxdesociété">Jeux de Société</a></li>
-        <li><a href="#jeuxvidéos">Jeux vidéos</a></li>
-        <li><a href="#contact">Contacts</a></li>
-        <li><a href="#jeuxpromotionnels">Jeux promotionnels</a></li>
+        <li>|</li>
+        <li><a href="fille.html">Filles</a></li>
+        <li>|</li>
+        <li><a href="Garcons.html">Garçons</a></li>
+        <li>|</li>
+        <li><a href="jeux_societe.html">Jeux de Société</a></li>
+        <li>|</li>
+        <li><a href="jeux_videos.html">Jeux vidéos</a></li>
+        <li>|</li>
+        <li><a href="contact.html">Contacts</a></li>
+        <li>|</li>
+        <li><a href="game.html">Jeu promotionnel</a></li>
       </ul>
      </nav>
     </header>
@@ -237,7 +249,9 @@
             De 2 à 6 joueurs.<br>
             Fonctionne avec 2 piles LR03 non incluses.</p>
         </div>
-<br><br><br><br>
+      </div>
+    </section>
+
 <!-- footer-->
     <footer>
       <p id="copy"><a href="Mention-legale.html">Copyright</a> &copy; 2017 <span>RoKeTe</span></p>
@@ -253,7 +267,10 @@
     </footer>
     <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 
-    <script type="text/javascript" src="../js/presentation_produit.js"></script>
+    <!-- Bouton go to top -->
+    <script type="text/javascript" src="../js/goToTop.js"></script>
+    <!--presentation des divs -->
+      <script type="text/javascript" src="../js/presentation_produit.js"></script>
 
 </body>
 </html>
