--- a/pages/jeux_videos.html
+++ b/pages/jeux_videos.html
@@ -10,18 +10,30 @@
   <body id="gris">
 
     <header>
-       <img class="logo" src="../assets/logo/Gifti5.png">
+      <!-- Pour le go to top -->
+      <a name="haut" id="haut"></a>
+      <div><a id="cRetour" class="cInvisible" href="#haut"></a></div>
+
+       <div class="logo"><a href="accueil.html"><img class="logoImg" src="../assets/logo/Gifti5.png"></a></div>
        <br><br>
      <nav>
 
       <ul>
+        <li><a href="accueil.html">Accueil</a></li>
+        <li>|</li>
         <li><a href="moinde5ans.html">Moins de 5 ans</a></li>
-        <li><a href="#filles">Filles</a></li>
-        <li><a href="#garçons">Garçons</a></li>
-        <li><a href="#jeuxdesociété">Jeux de Société</a></li>
-        <li><a href="#jeuxvidéos">Jeux vidéos</a></li>
-        <li><a href="#contact">Contacts</a></li>
-        <li><a href="#jeuxpromotionnels">Jeux promotionnels</a></li>
+        <li>|</li>
+        <li><a href="fille.html">Filles</a></li>
+        <li>|</li>
+        <li><a href="Garcons.html">Garçons</a></li>
+        <li>|</li>
+        <li><a href="jeux_societe.html">Jeux de Société</a></li>
+        <li>|</li>
+        <li><a href="jeux_videos.html">Jeux vidéos</a></li>
+        <li>|</li>
+        <li><a href="contact.html">Contacts</a></li>
+        <li>|</li>
+        <li><a href="game.html">Jeu promotionnel</a></li>
       </ul>
      </nav>
     </header>
@@ -156,7 +168,9 @@
           <button><span>69&euro;99</span></button>
           <p>Incarnez un intrépide soldat, pilotez des vaisseaux légendaires, menez vos personnages préférés de la saga Star Wars au combat, ou tracez votre propre chemin en incarnant un soldat d'élite des forces spéciales dans une nouvelle histoire Star Wars.</p>
         </div>
-<br><br><br><br>
+      </div>
+    </section>
+
 <!-- footer-->
     <footer>
       <p id="copy"><a href="Mention-legale.html">Copyright</a> &copy; 2017 <span>RoKeTe</span></p>
@@ -172,7 +186,10 @@
     </footer>
     <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 
-    <script type="text/javascript" src="../js/presentation_produit.js"></script>
+    <!-- Bouton go to top -->
+    <script type="text/javascript" src="../js/goToTop.js"></script>
+    <!--presentation des divs -->
+      <script type="text/javascript" src="../js/presentation_produit.js"></script>
 
 </body>
 </html>
